Attempt At Fixing Layout Issues
4x4x4 module positions not displaying inline. Second two modules pushed
under the first, with the first being still span4 width. removed
clear:left and added a bit padding to div.box.dlastrow + div.box class
on template.less file around line 169. works as an override. attempted
to change the .less file to fix more permanent. haven't tested changing
it in this file yet.

--- a/meet_gavern/less/template.less
+++ b/meet_gavern/less/template.less
@@ -169,7 +169,8 @@ footer .gk-copyrigths {
 /* Modules */
 div.box.dlastrow + div.box {
 	margin-left: 0 !important;
-	clear: left;
+	clear: none;
+	padding-left:30px;
 }
 div.box.dlastrow {
 	clear: right;
